Updated vale rules for upbound docs CI
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -30,10 +30,17 @@ gitlab.InclusionGender = NO
 # Don't enforce oxford comma
 Google.OxfordComma = NO
 
+# Ignore rules for capitalization after colons
+Google.Colons = NO
+
+# URL is valid for our audience
+Microsoft.GeneralURL = NO
+
 # Ingore Microsoft duplicates
 Microsoft.We = NO
 Microsoft.FirstPerson = NO
 Microsoft.Quotes = NO
+Microsoft.Foreign = NO
 
 # Exclude `{{< ... >}}`, `{{% ... %}}`, [Who]({{< ... >}})
 TokenIgnores = ({{[%<] .* [%>]}}.*?{{[%<] ?/.* [%>]}}), \
@@ -41,5 +48,5 @@ TokenIgnores = ({{[%<] .* [%>]}}.*?{{[%<] ?/.* [%>]}}), \
 
 # Exclude `{{<  myshortcode `This is some <b>HTML</b>, ... >}}`
 BlockIgnores = (?sm)^({{[%<] [^{]*? [%>]}})\n$, \
-(?s) *({{<\s?hint [^>]* ?>}}.*?{{< ?/ ?hint >}}) \
-(?s) *({{<\s?ref [^>]* ?>}}
+(?s) *({{<\s?hint [^>]* ?>}}.*?{{< ?/ ?hint >}}), \
+(?s) *({{<\s?ref [^>]* ?>}})
