--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -7,25 +7,44 @@ match: $sentence
 indicators:
   - ':'
 exceptions:
+  - "Composite Resource"
+  - "Managed Control Planes?"
+  - "Managed Resources"
+  - "OpenID Connect"
+  - "Service Account"
+  - "Universal Crossplane"
+  - "Upbound Console"
+  - "Upbound Universal Crossplane"
+  - APIs?
   - Azure
   - CLI
   - Code
   - Cosmos
+  - Crossplane
   - Docker
   - Emmet
-  - Hugo
+  - GCP
+  - GitHub
+  - GitOps
   - gRPC
+  - Hugo
   - I
+  - JavaScript
+  - Kubeconfig
   - Kubernetes
   - Linux
   - macOS
   - Marketplace
   - MongoDB
+  - ProviderConfigs
   - REPL
   - Studio
   - TypeScript
+  - Upbound
   - URLs
+  - UXP
   - Vale
+  - Vault
   - Visual
   - VS
   - Windows
