--- a/utils/vale/styles/Microsoft/HeadingAcronyms.yml
+++ b/utils/vale/styles/Microsoft/HeadingAcronyms.yml
@@ -5,3 +5,15 @@ level: warning
 scope: heading
 tokens:
   - '[A-Z]{2,4}'
+exceptions:
+  - API
+  - ARN
+  - AWS
+  - CLI
+  - CSS
+  - EKS
+  - GCP
+  - IAM
+  - MCP
+  - OIDC
+  - SCSS
