--- a/utils/webpack/package.json
+++ b/utils/webpack/package.json
@@ -12,5 +12,10 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-manifest-plugin": "^5.0.0"
+  },
+  "dependencies": {
+    "@cfworker/json-schema": "^1.12.5",
+    "flexsearch": "^0.7.31",
+    "lodash": "^4.17.21"
   }
 }
