Increase build timeout for Github runners to build search data
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,7 @@ title: "Upbound Docs"
 theme: "upbound"
 enableGitInfo: true
 uglyurls: false
+timeout: 180000
 disableKinds:
   - taxonomy
   - term
