--- a/utils/vale/styles/Microsoft/HeadingAcronyms.yml
+++ b/utils/vale/styles/Microsoft/HeadingAcronyms.yml
@@ -10,6 +10,7 @@ exceptions:
   - ARN
   - AWS
   - CLI
+  - CPU
   - CSS
   - EKS
   - GCP
@@ -17,3 +18,4 @@ exceptions:
   - MCP
   - OIDC
   - SCSS
+  - UXP
