--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -20,6 +20,7 @@ exceptions:
   - CLI
   - Code
   - Configuration
+  - ControllerConfigs
   - Cosmos
   - Crossplane
   - Docker
@@ -38,7 +39,9 @@ exceptions:
   - Marketplace
   - MongoDB
   - Provider
+  - ProviderConfig
   - ProviderConfigs
+  - Providers
   - REPL
   - Studio
   - TypeScript
