Remove inline vale rules and tweak vale settings

--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -51,3 +51,6 @@ TokenIgnores = ({{[%<] .* [%>]}}.*?{{[%<] ?/.* [%>]}}), \
 BlockIgnores = (?sm)^({{[%<] [^{]*? [%>]}})\n$, \
 (?s) *({{<\s?hint [^>]* ?>}}.*?{{< ?/ ?hint >}}), \
 (?s) *({{<\s?ref [^>]* ?>}})
+
+# alex settings
+alex.profanitySureness = 2
