Ignore YYYY-MM-DD dates in Vale

--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -42,9 +42,10 @@ Microsoft.FirstPerson = NO
 Microsoft.Quotes = NO
 Microsoft.Foreign = NO
 
-# Exclude `{{< ... >}}`, `{{% ... %}}`, [Who]({{< ... >}})
+# Exclude `{{< ... >}}`, `{{% ... %}}`, [Who]({{< ... >}}), YYYY-MM-DD
 TokenIgnores = ({{[%<] .* [%>]}}.*?{{[%<] ?/.* [%>]}}), \
-(\[.+\]\({{< .+ >}}\))
+(\[.+\]\({{< .+ >}}\)), \
+(\d{4}-\d{2}-\d{2})
 
 # Exclude `{{<  myshortcode `This is some <b>HTML</b>, ... >}}`
 BlockIgnores = (?sm)^({{[%<] [^{]*? [%>]}})\n$, \
