--- a/utils/vale/styles/Microsoft/HeadingAcronyms.yml
+++ b/utils/vale/styles/Microsoft/HeadingAcronyms.yml
@@ -11,6 +11,7 @@ exceptions:
   - AWS
   - CLI
   - CSS
+  - CPU
   - EKS
   - GCP
   - IAM
@@ -18,3 +19,4 @@ exceptions:
   - OIDC
   - SCSS
   - UXP
+  - XRD
