--- a/utils/vale/styles/gitlab/Uppercase.yml
+++ b/utils/vale/styles/gitlab/Uppercase.yml
@@ -36,6 +36,7 @@ exceptions:
   - CORE
   - CPU
   - CRD
+  - CRUD
   - CRIME
   - CSRF
   - CSS
@@ -116,6 +117,7 @@ exceptions:
   - MIME
   - MIT
   - MVC
+  - MVP
   - NAT
   - NDA
   - NFS
