Add documentation for integrating with Flux for now, call out gap for Argo

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -10,6 +10,7 @@ exceptions:
   - "Amazon Elastic Kubernetes Service"
   - "Composite Resource"
   - "Google Kubernetes Engine"
+  - "Integrate with Argo CD and Flux"
   - "Managed Control Planes?"
   - "Managed Resources"
   - "Microsoft Azure Kubernetes Service"
