--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -26,6 +26,7 @@ exceptions:
   - Code
   - Configuration
   - Configuration layout in Git
+  - ControllerConfig
   - ControllerConfigs
   - Cosmos
   - Crossplane
