Add overview docs

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -11,6 +11,8 @@ exceptions:
   - "Amazon Elastic Kubernetes Service"
   - "Composite Resource"
   - "Control Plane Source"
+  - "Create a Space"
+  - "Downgrade a Space"
   - "Google Kubernetes Engine"
   - "Configure Git reference"
   - "Example Prometheus installation"
@@ -26,8 +28,10 @@ exceptions:
   - "Per Space metrics"
   - "Service Account"
   - "Universal Crossplane"
+  - "Uninstall a Space"
   - "Upbound Console"
   - "Upbound Universal Crossplane"
+  - "Upgrade a Space"
   - "Use OpenAPI v3 data types"
   - "With Helm"
   - APIs?
