clarify argo install instructions

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -24,9 +24,11 @@ exceptions:
   - "Managed Control Planes?"
   - "Managed Resources"
   - "Microsoft Azure Kubernetes Service"
+  - "On cluster Argo CD"
   - "OpenID Connect"
   - "Per Space metrics"
   - "Service Account"
+  - "External cluster Argo CD"
   - "Universal Crossplane"
   - "Uninstall a Space"
   - "Upbound Console"
