add initial content for deployment sizing guide

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -28,6 +28,7 @@ exceptions:
   - "OpenID Connect"
   - "Per Space metrics"
   - "Service Account"
+  - "Sizing a Space"
   - "External cluster Argo CD"
   - "Universal Crossplane"
   - "Uninstall a Space"
