fix vale warning for section heading

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -12,6 +12,7 @@ exceptions:
   - "Composite Resource"
   - "Control Plane Source"
   - "Create a Space"
+  - "Deploying more than one Space"
   - "Downgrade a Space"
   - "Google Kubernetes Engine"
   - "Configure Git reference"
