--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -17,6 +17,7 @@ exceptions:
   - "Google Kubernetes Engine"
   - "Configure Git reference"
   - "Example Prometheus installation"
+  - "External Secrets Operator"
   - "Integrate with Argo CD and Flux"
   - "Install an Upbound Space"
   - "Install a Space"
