Document and update features for Spaces 1.1 (#251)
* Bump Spaces version in quickstart from 1.0.1 to 1.1
* Remove needlessly copying the comment during quickstart
* Add docs for using ESO with an MCP in a Space
* Add relnotes
* Add new up CLI commands
* Add docs to up CLI configuration explaining how to create or use a Space profile

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -10,6 +10,7 @@ exceptions:
   - "Authentication with Version Control Services"
   - "Amazon Elastic Kubernetes Service"
   - "Composite Resource"
+  - "Configure with Spaces"
   - "Control Plane Source"
   - "Create a Space"
   - "Deploying more than one Space"
@@ -17,6 +18,7 @@ exceptions:
   - "Google Kubernetes Engine"
   - "Configure Git reference"
   - "Example Prometheus installation"
+  - "External Secrets Operator"
   - "Integrate with Argo CD and Flux"
   - "Install an Upbound Space"
   - "Install a Space"
