--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -77,6 +77,8 @@ exceptions:
   - ProviderConfigs
   - Providers
   - REPL
+  - RuntimeConfig
+  - RuntimeConfigs
   - Studio
   - TypeScript
   - Upbound
