--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -45,7 +45,8 @@ Microsoft.Foreign = NO
 # Exclude `{{< ... >}}`, `{{% ... %}}`, [Who]({{< ... >}}), YYYY-MM-DD
 TokenIgnores = ({{[%<] .* [%>]}}.*?{{[%<] ?/.* [%>]}}), \
 (\[.+\]\({{< .+ >}}\)), \
-(\d{4}-\d{2}-\d{2})
+(\d{4}-\d{2}-\d{2}), \
+(\b(?:back[-\s]?end|back[-\s]?end)\b)
 
 # Exclude `{{<  myshortcode `This is some <b>HTML</b>, ... >}}`
 BlockIgnores = (?sm)^({{[%<] [^{]*? [%>]}})\n$, \
