+AWS, +OIDC. Sort the list
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -7,24 +7,25 @@ match: $sentence
 indicators:
   - ':'
 exceptions:
-  - "Authentication with Version Control Services"
   - "Amazon Elastic Kubernetes Service"
+  - "Authentication with Version Control Services"
   - "Composite Resource"
+  - "Configure Git reference"
   - "Configure with Spaces"
   - "Control Plane Source"
   - "Create a Space"
   - "Deploying more than one Space"
   - "Downgrade a Space"
-  - "Google Kubernetes Engine"
-  - "Configure Git reference"
   - "Example Prometheus installation"
+  - "External cluster Argo CD"
   - "External Secrets Operator"
   - "Generally Available"
-  - "Integrate with Argo CD and Flux"
-  - "Install an Upbound Space"
+  - "Google Kubernetes Engine"
   - "Install a Space"
-  - "Install Upbound Spaces"
   - "Install ALB Load Balancer"
+  - "Install an Upbound Space"
+  - "Install Upbound Spaces"
+  - "Integrate with Argo CD and Flux"
   - "Managed Control Planes?"
   - "Managed Resources"
   - "Microsoft Azure Kubernetes Service"
@@ -33,36 +34,37 @@ exceptions:
   - "Per Space metrics"
   - "Service Account"
   - "Sizing a Space"
-  - "External cluster Argo CD"
-  - "Universal Crossplane"
   - "Uninstall a Space"
+  - "Universal Crossplane"
   - "Upbound Console"
   - "Upbound Universal Crossplane"
   - "Upgrade a Space"
   - "Use OpenAPI v3 data types"
   - "With Helm"
   - APIs?
+  - AWS
   - Azure
   - CLI
-  - CRDs
   - Code
   - Configuration
   - Configuration layout in Git
   - ControllerConfig
   - ControllerConfigs
   - Cosmos
+  - CRDs
   - Crossplane
   - Docker
   - Emmet
   - GCP
   - GitHub
   - GitOps
+  - GitOps tools (Argo / Flux)
   - gRPC
   - Hugo
   - I
+  - IAM
   - Integrate Crossplane with Argo
   - Integrate Crossplane with Flux
-  - GitOps tools (Argo / Flux)
   - JavaScript
   - Kubeconfig
   - Kubernetes
@@ -71,6 +73,7 @@ exceptions:
   - Marketplace
   - MongoDB
   - OAuth
+  - OIDC
   - Open Policy Agent Gatekeeper
   - Provider
   - ProviderConfig
