--- a/config.yaml
+++ b/config.yaml
@@ -41,6 +41,10 @@ module:
       - "**/**.jpg"
       - "**/**.jpeg"
       - "**/**.gif"
+  - source: reference/space-api/yaml
+    target: data/crds/
+    includeFiles:
+      - "**/**.yaml"
 
 # Enable Hugo access to environmental variables to apply deploy preview banner
 security:
