--- a/config.yaml
+++ b/config.yaml
@@ -41,8 +41,8 @@ module:
       - "**/**.jpg"
       - "**/**.jpeg"
       - "**/**.gif"
-  - source: reference/space-api/yaml
-    target: data/crds/
+  - source: content
+    target: assets/crds
     includeFiles:
       - "**/**.yaml"
 
