--- a/content/reference/spaceapi/yaml/sharedsecret.yaml
+++ b/content/reference/spaceapi/yaml/sharedsecret.yaml
@@ -1,55 +1,131 @@
-apiVersion: spaces.upbound.io/v1alpha1
-kind: SharedExternalSecret
+apiVersion: spaces.upbound.io/v1beta1
+kind: SharedExternalSecrets
 metadata:
-  name: shared-vault-secret
+  name: sharedexternalsecrets.spaces.upbound.io
   namespace: default
 spec:
-  externalSecretName: my-secret
-  externalSecretMetadata:
-    labels:
-      acmeco/label: my-label
-  controlPlaneSelector:
-    labelSelectors:
-      - controlplane: dev
-    names:
-      - ctp1
-      - ctp2
-  namespaceSelector:
-    matchLabels:
-      - controlplane: dev
-    names:
-      - ns1
-      - ns2
-  refreshTime: 1m
-  externalSecretSpec: null
-  secretStoreRef:
-    name: secret-store-name
-    kind: SecretStore
-    refreshInterval: 1h
-  target:
-    name: my-secret
-    creationPolicy: Merge
-    template:
-      type: kubernetes.io/dockerconfigjson
-      metadata:
-        annotations: {}
-        labels: {}
-      data:
-        config.yml: |
-          endpoints:
-          - https://{{ .data.user }}:{{ .data.password }}@api.exmaple.com
-      templateFrom:
-        - configMap:
-            name: alertmanager
-            items:
-              - key: alertmanager.yaml
-  data:
-    - secretKey: secret-key-to-be-managed
-      remoteRef:
-        key: provider-key
-        version: provider-key-version
-        property: provider-key-property
-  dataFrom:
-    - key: provider-key
-      version: provider-key-version
-      property: provider-key-property
+  group: spaces.upbound.io
+  names:
+    kind: SharedExternalSecret
+    listKind: SharedExternalSecretList
+    plural: sharedexternalsecrets
+    singular: sharedexternalsecret
+  scope: Namespaced
+  versions:
+  - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: SharedExternalSecret allows for sharing secrets across control
+          planes based on label selectors.
+        properties:
+          apiVersion:
+            type: string
+          kind:
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              controlPlaneSelector:
+                description: The external secret is projected only to control planes
+                  matching the provided label selector.
+                properties:
+                  labelSelectors:
+                    items:
+                      type: string
+                    type: array
+                  names:
+                    items:
+                      type: string
+                    type: array
+                type: object
+              externalSecretMetadata:
+                description: The metadata of the external secret to be created.
+                properties:
+                  labels:
+                    additionalProperties:
+                      type: string
+                    type: object
+                type: object
+              externalSecretName:
+                description: Optional, the name to be used on external-secrets.io/v1beta1
+                  ExternalSecret created in ControlPlane. If not set, SharedExternalSecret
+                  name will be used.
+                type: string
+              externalSecretSpec:
+                description: The spec of the ExternalSecrets to be created.
+                properties:
+                  data:
+                    items:
+                      type: object
+                    type: array
+                  dataFrom:
+                    items:
+                      type: object
+                    type: array
+                  secretStoreRef:
+                    properties:
+                      kind:
+                        type: string
+                      name:
+                        type: string
+                      refreshInterval:
+                        type: string
+                    type: object
+                  target:
+                    properties:
+                      creationPolicy:
+                        type: string
+                      name:
+                        type: string
+                      template:
+                        properties:
+                          data:
+                            additionalProperties:
+                              type: string
+                            type: object
+                          metadata:
+                            properties:
+                              annotations:
+                                additionalProperties:
+                                  type: string
+                                type: object
+                              labels:
+                                additionalProperties:
+                                  type: string
+                                type: object
+                            type: object
+                          templateFrom:
+                            items:
+                              type: object
+                            type: array
+                          type:
+                            type: string
+                        type: object
+                    type: object
+                type: object
+              namespaceSelector:
+                description: Project secrets into namespaces matching the declared
+                  criteria.
+                properties:
+                  matchLabels:
+                    items:
+                      type: string
+                    type: array
+                  names:
+                    items:
+                      type: string
+                    type: array
+                type: object
+              refreshTime:
+                description: How often the SharedExternalSecret should reconcile itself.
+                type: string
+            required:
+            - externalSecretMetadata
+            - controlPlaneSelector
+            - namespaceSelector
+            - externalSecretSpec
+            type: object
+        type: object
+    served: true
+    storage: true
