--- a/utils/htmltest/.htmltest.yml
+++ b/utils/htmltest/.htmltest.yml
@@ -1,4 +1,5 @@
 DirectoryPath: "public"
 CheckExternal: false
+IgnoreInternalEmptyHash: true
 IgnoreURLs:
   - "github.com/upbound/docs/tree/main/content/(.*).md" # Ignore the links to "view this source"
