Spaces API Documentation Update (#330)
* version update

* x

* x

* spaces

* progress

* progress

* Revert "x"

This reverts commit 8eb8c22c76fe394e4501b1271eb4b3fa3f35fae5.

* Revert "version update"

This reverts commit dd3c6a9725e9594906a1bc56ee04691fca92fdc7.

* non-essential files

* x

* edits from review

* update hugo verson

* yaml files from source

* update kind path

* ui updates

* path updates

* path

* back to top

* test

* empty hash

---------

Signed-off-by: R. Sharp <8883519+tr0njavolta@users.noreply.github.com>

--- a/config.yaml
+++ b/config.yaml
@@ -41,6 +41,10 @@ module:
       - "**/**.jpg"
       - "**/**.jpeg"
       - "**/**.gif"
+  - source: content
+    target: data/crds
+    includeFiles:
+      - "**/**.yaml"
 
 # Enable Hugo access to environmental variables to apply deploy preview banner
 security:
