Update AWS authentication.md (#272)
* Update AWS authentication.md

https://github.com/upbound/docs/issues/271

Signed-off-by: Sharp <8883519+tr0njavolta@users.noreply.github.com>

* Update content/providers/provider-aws/authentication.md

Signed-off-by: Sharp <8883519+tr0njavolta@users.noreply.github.com>

* Update Headings.yml

Signed-off-by: Sharp <8883519+tr0njavolta@users.noreply.github.com>

* add deploymentruntimeconfig

* Update authentication.md

* Update Headings.yml

---------

Signed-off-by: Sharp <8883519+tr0njavolta@users.noreply.github.com>

--- a/utils/vale/styles/Google/Headings.yml
+++ b/utils/vale/styles/Google/Headings.yml
@@ -83,6 +83,8 @@ exceptions:
   - ProviderConfigs
   - Providers
   - REPL
+  - DeploymentRuntimeConfig
+  - DeploymentRuntimeConfigs
   - Studio
   - TypeScript
   - Upbound
