--- a/.github/workflows/build-hugo-templates.yml
+++ b/.github/workflows/build-hugo-templates.yml
@@ -17,6 +17,10 @@ jobs:
           hugo-version: '0.111.3'
           extended: true
 
+      - name: Clean
+        # Rebuild from scratch
+        run: hugo --cleanDestinationDir
+
       - name: Build
         # Set to env=dev so SCSS isn't required.
         run: hugo --environment development --templateMetrics --templateMetricsHints
