--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -22,13 +22,9 @@ jobs:
           hugo-version: '0.111.3'
           extended: true
            
-      - name: Clean
-        # Rebuild from scratch
-        run: hugo --cleanDestinationDir
-
-      - name: Build
-        # Set to env=dev so SCSS isn't required.
-        run: hugo --environment development
+      - name: Clean and Build
+        # Rebuild from scratch using development environment
+        run: hugo --cleanDestinationDir --environment development
 
       - name: Run htmltest
         uses: wjdp/htmltest-action@master
