--- a/content/reference/space-api/yaml/policy.spaces.upbound.io_sharedupboundpolicies.yaml
+++ b/content/reference/space-api/yaml/policy.spaces.upbound.io_sharedupboundpolicies.yaml
@@ -2409,7 +2409,7 @@ spec:
                                       The value is null for DELETE requests.\n- 'oldObject'
                                       - The existing object. The value is null for
                                       CREATE requests.\n- 'request' - Attributes of
-                                      the API request([ref](/pkg/apis/admission/types.go#AdmissionRequest)).\n-
+                                      the API request([ref](https://pkg.go.dev/k8s.io/kubernetes/pkg/apis/admission#AdmissionRequest)).\n-
                                       'params' - Parameter resource referred to by
                                       the policy binding being evaluated. Only populated
                                       if the policy has a ParamKind.\n- 'namespaceObject'
