updates and vale rule

--- a/utils/vale/.vale.ini
+++ b/utils/vale/.vale.ini
@@ -22,6 +22,7 @@ gitlab.TabsLinks = NO
 gitlab.VersionText = NO
 gitlab.VersionTextSingleLine = NO
 gitlab.EOLWhitespace = NO
+gitlab.MeaningfulLinkWords = NO
 
 # Covered by Alex
 gitlab.InclusionCultural = NO
