--- a/content/reference/space-api/v1.8/descriptions/policy.spaces.upbound.io/SharedUpboundPolicy/properties/spec/properties/rules/items/properties/validate/properties/cel/properties/expressions/items/properties/expression/description.yaml
+++ b/content/reference/space-api/v1.8/descriptions/policy.spaces.upbound.io/SharedUpboundPolicy/properties/spec/properties/rules/items/properties/validate/properties/cel/properties/expressions/items/properties/expression/description.yaml
@@ -5,7 +5,7 @@ description: |-
     
     - 'object' - The object from the incoming request. The value is null for DELETE requests.
     - 'oldObject' - The existing object. The value is null for CREATE requests.
-    - 'request' - Attributes of the API request([ref](/pkg/apis/admission/types.go#AdmissionRequest)).
+    - 'request' - Attributes of the API request([ref](https://pkg.go.dev/k8s.io/kubernetes/pkg/apis/admission#AdmissionRequest)).
     - 'params' - Parameter resource referred to by the policy binding being evaluated. Only populated if the policy has a ParamKind.
     - 'namespaceObject' - The namespace object that the incoming object belongs to. The value is null for cluster-scoped resources.
     - 'variables' - Map of composited variables, from its name to its lazily evaluated value.
