--- a/utils/webpack/package.json
+++ b/utils/webpack/package.json
@@ -4,12 +4,12 @@
     "dev": "webpack --mode=development"
   },
   "devDependencies": {
-    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap": "^5.3.3",
     "clipboard": "^2.0.11",
-    "instant.page": "^5.1.1",
+    "instant.page": "^5.2.0",
     "jquery": "^3.6.4",
-    "lightbox2": "^2.11.4",
-    "webpack": "^5.75.0",
+    "lightbox2": "^2.11.5",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-manifest-plugin": "^5.0.0"
   },
