Update docs to latest Spaces release version
Signed-off-by: Jean du Plessis <jean@upbound.io>

--- a/config.yaml
+++ b/config.yaml
@@ -54,7 +54,7 @@ security:
       - ^REVIEW_ID
 
 params:
-  latest: v1.9
+  latest: v1.9   #we should look to replace this value with the spaces.version values below
   repoLink: "https://github.com/upbound/"
   anchors:
     min: 2
@@ -63,3 +63,9 @@ params:
 
   hideDropdown:
     - "reference/space-api"
+  spaces:
+    version:
+      major: 1
+      minor: 9
+      patch: 4
+
